--- a/run-configurations/ItemMaster-FO-Sub-Dev01/application.properties
+++ b/run-configurations/ItemMaster-FO-Sub-Dev01/application.properties
@@ -25,3 +25,17 @@ messaging.ITEM_MASTER_UM.enabled=true
 jndi.itemMaster.initialContextFactory=com.pcbsys.nirvana.nSpace.NirvanaContextFactory
 jndi.itemMaster.providerURL=nsp://um:9000
 jms.itemMaster.jndi_jndiAliasName=itemMaster
+# JDBC Pools
+## pgsql pool
+jdbc.pgsql.dbURL=jdbc\:wm\:postgresql\://$env{POSTGRES_SERVER}\:$env{POSTGRES_PORT};databaseName\=$env{POSTGRES_DB}
+jdbc.pgsql.driverAlias=DataDirect Connect JDBC PostgreSQL Driver
+jdbc.pgsql.userid=$env{POSTGRES_USER}
+jdbc.pgsql.password=$env{POSTGRES_PASSWORD}
+## link pool to functions
+jdbcfunc.Adapters.connPoolAlias=pgsql
+jdbcfunc.Archiving.connPoolAlias=pgsql
+jdbcfunc.CentralUsers.connPoolAlias=pgsql
+jdbcfunc.ISCoreAudit.connPoolAlias=pgsql
+jdbcfunc.ISDashboardsStats.connPoolAlias=pgsql
+jdbcfunc.ProcessAudit.connPoolAlias=pgsql
+jdbcfunc.Xref.connPoolAlias=pgsql
