--- a/run-configurations/ItemMaster-FO-Sub-Dev01/example.env
+++ b/run-configurations/ItemMaster-FO-Sub-Dev01/example.env
@@ -16,3 +16,11 @@ UM_CONTAINER_IMAGE_TAG=_your_fix_level_here_
 
 # Where is XCEIDocs on the local file system?
 XCEIDOCS_PACKAGE_LOCATION=C:\path\to\XCEIDocs
+
+#### Postgres Configuration
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=mypgdbpass
+
+#### Database Configurator Image
+DBC_CONTAINER_IMAGE=mi24a7acr.azurecr.io/wm-dbc
+DBC_CONTAINER_IMAGE_TAG=Fixes_24-03-13
